// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Payment View should render correctly 1`] = `
<View
  className=""
  labels={
    Object {
      "common": Object {},
      "giftCard": "Payment",
      "paymentGC": Object {},
    }
  }
>
  <ScrollViewMock
    showsVerticalScrollIndicator={false}
  >
    <Styled(Text)>
      <Styled(BodyCopy)
        fontSize="fs16"
        fontWeight="extrabold"
        text=""
      />
    </Styled(Text)>
    <Styled(View) />
  </ScrollViewMock>
</View>
`;

exports[`Payment View should render correctly with cardList 1`] = `
<View
  cardList={
    Immutable.List [
      Object {
        "accountNo": "************1111",
        "addressDetails": Object {
          "addressLine1": "111 3rd Ave",
          "addressLine2": "",
          "city": "New York",
          "country": "US",
          "firstName": "new",
          "lastName": "address",
          "phone1": "9878909876",
          "state": "NY",
          "zipCode": "10003",
        },
        "billingAddressId": 160685,
        "ccBrand": "Visa",
        "ccType": "COMPASSVISA",
        "creditCardId": 73501,
        "defaultInd": false,
        "expMonth": "5 ",
        "expYear": "2024",
        "nameOnAccount": ".",
        "properties": null,
      },
    ]
  }
  className=""
  creditCardList={
    Immutable.List [
      Object {
        "accountNo": "************1111",
        "addressDetails": Object {
          "addressLine1": "111 3rd Ave",
          "addressLine2": "",
          "city": "New York",
          "country": "US",
          "firstName": "new",
          "lastName": "address",
          "phone1": "9878909876",
          "state": "NY",
          "zipCode": "10003",
        },
        "billingAddressId": 160685,
        "ccBrand": "Visa",
        "ccType": "COMPASSVISA",
        "creditCardId": 73501,
        "defaultInd": false,
        "expMonth": "5 ",
        "expYear": "2024",
        "nameOnAccount": ".",
        "properties": null,
      },
    ]
  }
  giftCardList={
    Immutable.List [
      Object {
        "accountNo": "************1111",
        "addressDetails": Object {
          "addressLine1": "111 3rd Ave",
          "addressLine2": "",
          "city": "New York",
          "country": "US",
          "firstName": "new",
          "lastName": "address",
          "phone1": "9878909876",
          "state": "NY",
          "zipCode": "10003",
        },
        "billingAddressId": 160685,
        "ccBrand": "Visa",
        "ccType": "COMPASSVISA",
        "creditCardId": 73501,
        "defaultInd": false,
        "expMonth": "5 ",
        "expYear": "2024",
        "nameOnAccount": ".",
        "properties": null,
      },
    ]
  }
  labels={
    Object {
      "common": Object {},
      "paymentGC": Object {},
      "paymentHeading": "Payment",
    }
  }
  showNotification="success"
>
  <ScrollViewMock
    showsVerticalScrollIndicator={false}
  >
    <Styled(Text)>
      <Styled(BodyCopy)
        fontSize="fs16"
        fontWeight="extrabold"
        text=""
      />
    </Styled(Text)>
    <Styled(View) />
    <Styled(OffersSection)
      labels={
        Object {
          "common": Object {},
          "paymentGC": Object {},
          "paymentHeading": "Payment",
        }
      }
    />
    <Styled(Cards)
      cardImage={
        Object {
          "testUri": "../../../src/assets/images/credit-card.png",
        }
      }
      cardList={
        Immutable.List [
          Object {
            "accountNo": "************1111",
            "addressDetails": Object {
              "addressLine1": "111 3rd Ave",
              "addressLine2": "",
              "city": "New York",
              "country": "US",
              "firstName": "new",
              "lastName": "address",
              "phone1": "9878909876",
              "state": "NY",
              "zipCode": "10003",
            },
            "billingAddressId": 160685,
            "ccBrand": "Visa",
            "ccType": "COMPASSVISA",
            "creditCardId": 73501,
            "defaultInd": false,
            "expMonth": "5 ",
            "expYear": "2024",
            "nameOnAccount": ".",
            "properties": null,
          },
        ]
      }
      labels={
        Object {
          "common": Object {},
          "paymentGC": Object {},
          "paymentHeading": "Payment",
        }
      }
      setDefaultPaymentMethod={null}
    />
    <Styled(Cards)
      cardImage={
        Object {
          "testUri": "../../../src/assets/images/gift-card.png",
        }
      }
      cardList={
        Immutable.List [
          Object {
            "accountNo": "************1111",
            "addressDetails": Object {
              "addressLine1": "111 3rd Ave",
              "addressLine2": "",
              "city": "New York",
              "country": "US",
              "firstName": "new",
              "lastName": "address",
              "phone1": "9878909876",
              "state": "NY",
              "zipCode": "10003",
            },
            "billingAddressId": 160685,
            "ccBrand": "Visa",
            "ccType": "COMPASSVISA",
            "creditCardId": 73501,
            "defaultInd": false,
            "expMonth": "5 ",
            "expYear": "2024",
            "nameOnAccount": ".",
            "properties": null,
          },
        ]
      }
      labels={
        Object {
          "common": Object {},
          "paymentGC": Object {},
          "paymentHeading": "Payment",
        }
      }
      setDefaultPaymentMethod={null}
    />
  </ScrollViewMock>
</View>
`;
